--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -21,6 +21,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import re\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from datetime import datetime\n",
+    "from itertools import compress "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -40,31 +54,18 @@
     "from churchland_pipeline import lab\n",
     "from churchland_pipeline import processing  as pro\n",
     "from churchland_pipeline import reference   as ref\n",
-    "\n",
+    "from churchland_pipeline.rigs.Jumanji import speedgoat as sg\n",
     "from churchland_pipeline.tasks import pacman as pac\n",
     "from churchland_pipeline import common as com"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import re\n",
-    "from datetime import datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# monkey and rigs to import\n",
-    "MONKEY = 'Cousteau'\n",
-    "RIG = 'Jumanji'"
+    "ERD_PATH = '/scratch/users/njm2149/datajoint/churchland_pipeline/images/'"
    ]
   },
   {
@@ -73,15 +74,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# monkey and rigs to import\n",
+    "MONKEY = 'Cousteau'\n",
+    "RIG = 'Jumanji'\n",
+    "TASK = 'Pacman'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# session dates\n",
-    "rawPath = '/srv/locker/churchland/{}/pacman-task/{}/raw/'.format(RIG, MONKEY.lower())\n",
+    "rawPath = '/srv/locker/churchland/{}/{}-task/{}/raw/'.format(RIG, TASK.lower(), MONKEY.lower())\n",
     "dates = sorted(list(os.listdir(rawPath)))\n",
     "dates = [x for x in dates if re.search('\\d{4}-\\d{2}-\\d{2}',x) is not None]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +104,7 @@
     "        and all([x in os.listdir(rawPath + date + '/') for x in ['speedgoat','blackrock']])):\n",
     "        \n",
     "            # insert session\n",
-    "            acq.Session.insert1((date,MONKEY,RIG))\n",
+    "            acq.Session.insert1((date,MONKEY,RIG,TASK))\n",
     "            \n",
     "            # insert users\n",
     "            acq.Session.User.insert1((date,MONKEY,'njm2149'))\n",
@@ -101,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,6 +124,134 @@
     "            'pacman': dj.ERD(pac),\n",
     "            'emg': (dj.ERD(acq.EmgChannelGroup)-1) + (dj.ERD(pro.MotorUnit)-1+10),\n",
     "            'neural': (dj.ERD(acq.NeuralChannelGroup)-1) + (dj.ERD(pro.Neuron)-1+10)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# locate summary file (temporary until behavior recording filepath attribute update)\n",
+    "sgPath = rawPath + dates[17] + '/speedgoat/'\n",
+    "sgFiles = sorted(list(os.listdir(sgPath)))\n",
+    "summaryFile = [x for x in sgFiles if re.search('.*\\.summary',x) is not None][0]\n",
+    "\n",
+    "# speedgoat prefix\n",
+    "sgPrefix = sgPath + re.search('(.*)\\.summary',summaryFile).group(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'Init'),\n",
+       " (1, 'Delay'),\n",
+       " (2, 'PreTrial'),\n",
+       " (3, 'FirstDotAppears'),\n",
+       " (4, 'InFirstPad'),\n",
+       " (5, 'InTarget'),\n",
+       " (6, 'InSecondPad'),\n",
+       " (7, 'PastLastDot'),\n",
+       " (100, 'Success'),\n",
+       " (251, 'Glitch'),\n",
+       " (252, 'Abort'),\n",
+       " (253, 'Failure'),\n",
+       " (254, 'PostTrial'),\n",
+       " (255, 'Pause')]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taskState = sg.readtaskstates(sgPrefix + '.summary')\n",
+    "taskState"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'frcPol': 1,\n",
+       " 'frcMax': 16.0,\n",
+       " 'frcOff': 0.3,\n",
+       " 'padDur': 1,\n",
+       " 'type': 'SIN',\n",
+       " 'offset': (0.75, 0, 0),\n",
+       " 'amplitude': (-0.75, 0, 0),\n",
+       " 'duration': 2,\n",
+       " 'frequency': (2, 0, 0),\n",
+       " 'power': 0,\n",
+       " 'condNo': 12.0,\n",
+       " 'saveTag': 0,\n",
+       " 'stim': 0,\n",
+       " 'stimPolarity': 0,\n",
+       " 'stimPulses': 0,\n",
+       " 'stimWidth1': 0,\n",
+       " 'stimWidth2': 0,\n",
+       " 'stimInterphase': 0,\n",
+       " 'stimFrequency': 0,\n",
+       " 'stimCurrent': 0,\n",
+       " 'stimElectrode': 0,\n",
+       " 'stimDelay': 0}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params = sg.readtrialparams(sgPrefix, 1)\n",
+    "params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'successful_trial': 1,\n",
+       " 'simulation_time': array([3994.97 , 3994.971, 3994.972, ..., 4002.593, 4002.594, 4002.595]),\n",
+       " 'task_state': array([  0,   1,   1, ...,   7,   7, 100], dtype=uint8),\n",
+       " 'force_raw_online': array([-0.97351074, -1.06506348, -0.79986572, ...,  1.93267822,\n",
+       "         1.79077148,  1.84356689]),\n",
+       " 'force_filt_online': array([0.04478807, 0.04423022, 0.04493461, ..., 0.80688527, 0.80710008,\n",
+       "        0.80694355]),\n",
+       " 'stim': array([0, 0, 0, ..., 0, 0, 0], dtype=uint8),\n",
+       " 'reward': array([0, 0, 0, ..., 0, 0, 0], dtype=uint8),\n",
+       " 'photobox': array([4.48791504, 0.65704346, 0.16662598, ..., 0.50262451, 1.88568115,\n",
+       "        3.76586914])}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = sg.readtrialdata(sgPrefix,1)\n",
+    "data"
    ]
   },
   {
@@ -127,8 +268,8 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "best way to develop populate functions? (faster way of getting the next unpopulated key in jupyter vs. explicit database algebra?)\n",
-    "reminder of schema name types\n",
+    "unclear bug in BehaviorRecording populate function\n",
+    "should Pacman task schema tables be tagged with lab.Task \"Pacman\" entry?\n",
     "\"\"\""
    ]
   }
