Updated acquisition schema
- Minor edit to local path definition on server

--- a/churchland_pipeline/users/njm2149/sandbox.ipynb
+++ b/churchland_pipeline/users/njm2149/sandbox.ipynb
@@ -13,7 +13,9 @@
     "import numpy as np\n",
     "from datetime import datetime\n",
     "from itertools import compress\n",
-    "sys.path.insert(0, os.getcwd() + '/brPY/')\n",
+    "from pathlib import Path\n",
+    "sys.path.insert(0, str(Path(os.getcwd()).parents[2]))\n",
+    "sys.path.insert(0, str(Path(os.getcwd()).parents[2]) + '/brPY/')\n",
     "from brpylib import NsxFile, brpylib_ver"
    ]
   },
@@ -85,147 +87,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "\n",
-       "        \n",
-       "        <style type=\"text/css\">\n",
-       "            .Relation{\n",
-       "                border-collapse:collapse;\n",
-       "            }\n",
-       "            .Relation th{\n",
-       "                background: #A0A0A0; color: #ffffff; padding:4px; border:#f0e0e0 1px solid;\n",
-       "                font-weight: normal; font-family: monospace; font-size: 100%;\n",
-       "            }\n",
-       "            .Relation td{\n",
-       "                padding:4px; border:#f0e0e0 1px solid; font-size:100%;\n",
-       "            }\n",
-       "            .Relation tr:nth-child(odd){\n",
-       "                background: #ffffff;\n",
-       "            }\n",
-       "            .Relation tr:nth-child(even){\n",
-       "                background: #f3f1ff;\n",
-       "            }\n",
-       "            /* Tooltip container */\n",
-       "            .djtooltip {\n",
-       "            }\n",
-       "            /* Tooltip text */\n",
-       "            .djtooltip .djtooltiptext {\n",
-       "                visibility: hidden;\n",
-       "                width: 120px;\n",
-       "                background-color: black;\n",
-       "                color: #fff;\n",
-       "                text-align: center;\n",
-       "                padding: 5px 0;\n",
-       "                border-radius: 6px;\n",
-       "                /* Position the tooltip text - see examples below! */\n",
-       "                position: absolute;\n",
-       "                z-index: 1;\n",
-       "            }\n",
-       "            #primary {\n",
-       "                font-weight: bold;\n",
-       "                color: black;\n",
-       "            }\n",
-       "\n",
-       "            #nonprimary {\n",
-       "                font-weight: normal;\n",
-       "                color: white;\n",
-       "            }\n",
-       "\n",
-       "            /* Show the tooltip text when you mouse over the tooltip container */\n",
-       "            .djtooltip:hover .djtooltiptext {\n",
-       "                visibility: visible;\n",
-       "            }\n",
-       "        </style>\n",
-       "        \n",
-       "        <b>Recording session</b>\n",
-       "            <div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-       "            <table border=\"1\" class=\"Relation\">\n",
-       "                <thead> <tr style=\"text-align: right;\"> <th> <div class=\"djtooltip\">\n",
-       "                                <p id=\"primary\">session_date</p>\n",
-       "                                <span class=\"djtooltiptext\">session date</span>\n",
-       "                            </div></th><th><div class=\"djtooltip\">\n",
-       "                                <p id=\"primary\">monkey</p>\n",
-       "                                <span class=\"djtooltiptext\">unique monkey name</span>\n",
-       "                            </div></th><th><div class=\"djtooltip\">\n",
-       "                                <p id=\"nonprimary\">rig</p>\n",
-       "                                <span class=\"djtooltiptext\">unique rig name</span>\n",
-       "                            </div></th><th><div class=\"djtooltip\">\n",
-       "                                <p id=\"nonprimary\">task</p>\n",
-       "                                <span class=\"djtooltiptext\">unique task name</span>\n",
-       "                            </div> </th> </tr> </thead>\n",
-       "                <tbody> <tr> <td>2018-04-13</td>\n",
-       "<td>Cousteau</td>\n",
-       "<td>Jumanji</td>\n",
-       "<td>pacman</td></tr><tr><td>2018-04-20</td>\n",
-       "<td>Cousteau</td>\n",
-       "<td>Jumanji</td>\n",
-       "<td>pacman</td></tr><tr><td>2018-06-15</td>\n",
-       "<td>Cousteau</td>\n",
-       "<td>Jumanji</td>\n",
-       "<td>pacman</td></tr><tr><td>2018-06-22</td>\n",
-       "<td>Cousteau</td>\n",
-       "<td>Jumanji</td>\n",
-       "<td>pacman</td></tr><tr><td>2018-07-18</td>\n",
-       "<td>Cousteau</td>\n",
-       "<td>Jumanji</td>\n",
-       "<td>pacman</td></tr><tr><td>2018-09-25</td>\n",
-       "<td>Cousteau</td>\n",
-       "<td>Jumanji</td>\n",
-       "<td>pacman</td></tr><tr><td>2018-10-02</td>\n",
-       "<td>Cousteau</td>\n",
-       "<td>Jumanji</td>\n",
-       "<td>pacman</td></tr><tr><td>2018-10-03</td>\n",
-       "<td>Cousteau</td>\n",
-       "<td>Jumanji</td>\n",
-       "<td>pacman</td></tr><tr><td>2018-10-05</td>\n",
-       "<td>Cousteau</td>\n",
-       "<td>Jumanji</td>\n",
-       "<td>pacman</td></tr><tr><td>2018-10-09</td>\n",
-       "<td>Cousteau</td>\n",
-       "<td>Jumanji</td>\n",
-       "<td>pacman</td></tr><tr><td>2018-10-11</td>\n",
-       "<td>Cousteau</td>\n",
-       "<td>Jumanji</td>\n",
-       "<td>pacman</td></tr><tr><td>2018-10-16</td>\n",
-       "<td>Cousteau</td>\n",
-       "<td>Jumanji</td>\n",
-       "<td>pacman</td> </tr> </tbody>\n",
-       "            </table>\n",
-       "            <p>...</p>\n",
-       "            <p>Total: 75</p></div>\n",
-       "            "
-      ],
       "text/plain": [
-       "*session_date  *monkey      rig         task      \n",
-       "+------------+ +----------+ +---------+ +--------+\n",
-       "2018-04-13     Cousteau     Jumanji     pacman    \n",
-       "2018-04-20     Cousteau     Jumanji     pacman    \n",
-       "2018-06-15     Cousteau     Jumanji     pacman    \n",
-       "2018-06-22     Cousteau     Jumanji     pacman    \n",
-       "2018-07-18     Cousteau     Jumanji     pacman    \n",
-       "2018-09-25     Cousteau     Jumanji     pacman    \n",
-       "2018-10-02     Cousteau     Jumanji     pacman    \n",
-       "2018-10-03     Cousteau     Jumanji     pacman    \n",
-       "2018-10-05     Cousteau     Jumanji     pacman    \n",
-       "2018-10-09     Cousteau     Jumanji     pacman    \n",
-       "2018-10-11     Cousteau     Jumanji     pacman    \n",
-       "2018-10-16     Cousteau     Jumanji     pacman    \n",
-       "   ...\n",
-       " (Total: 75)"
+       "'/Volumes/Churchland-locker/Jumanji/pacman-task/cousteau/raw/'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "acq.Session()"
+    "acq.Session.getrawpath('Cousteau','Jumanji','pacman')"
    ]
   },
   {
