Added equipment, removed ephys, and updated schemas
- Updated schema names to reflect permission level
- Added equipment schema (behavioral, ephys, and surgical equipment)
- Added equipment as Part tables of Session
- Replaced EphysRecording "electrode" with "channel"
- Split pacman schema into acquisition and processing
- Reorganized pacman condition structure to be more modular
- Removed Task module and TrialBlock table (obsolete with Session save tags)
- Added function for getting children of a table to utilities (WIP)
- Updated ERDs

--- a/churchland_pipeline/users/njm2149/sandbox.ipynb
+++ b/churchland_pipeline/users/njm2149/sandbox.ipynb
@@ -2,40 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connecting ChurchlandLab_test@s1n4.u19motor.zi.columbia.edu:3306\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "import os, sys, pathlib\n",
     "sys.path.insert(0, str(pathlib.Path(os.getcwd()).parents[2]))\n",
     "sys.path.insert(0, str(pathlib.Path(os.getcwd()).parents[2]) + '/brPY/')\n",
     "import datajoint as dj\n",
-    "from churchland_pipeline import acquisition as acq\n",
-    "from churchland_pipeline import action      as act\n",
-    "from churchland_pipeline import ephys       as eph\n",
-    "from churchland_pipeline import lab\n",
-    "from churchland_pipeline import processing  as pro\n",
-    "from churchland_pipeline import reference   as ref\n",
-    "from churchland_pipeline.rigs.Jumanji import speedgoat as sg\n",
-    "from churchland_pipeline.tasks.pacman import pacman as pac\n",
-    "from churchland_pipeline import common as com"
+    "from churchland_pipeline import action, acquisition, equipment, lab, processing, reference\n",
+    "from churchland_pipeline.rigs.Jumanji import speedgoat\n",
+    "from churchland_pipeline.tasks.pacman import pacman_acquisition, pacman_processing\n",
+    "images_path = '/Users/Najja/Documents/code/data-synthesis/datajoint-churchland/churchland_pipeline/images/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
+    "import re, inspect\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import datetime\n",
@@ -45,15 +34,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# aggregate pipelines\n",
-    "Pipeline = {'common': dj.ERD(acq) + dj.ERD(eph) + dj.ERD(lab) + dj.ERD(pro) + dj.ERD(ref),\n",
-    "            'pacman': dj.ERD(pac),\n",
-    "            'emg': (dj.ERD(acq.EmgChannelGroup)-1) + (dj.ERD(pro.MotorUnit)-1+10) - dj.ERD(pac),\n",
-    "            'neural': (dj.ERD(acq.NeuralChannelGroup)-1) + (dj.ERD(pro.Neuron)-1+10) - dj.ERD(pac)}"
+    "Pipeline = {'common': dj.ERD(action) + dj.ERD(acquisition) + dj.ERD(equipment) + dj.ERD(lab) + dj.ERD(processing) + dj.ERD(reference),\n",
+    "            'pacman': dj.ERD(pacman_acquisition) + dj.ERD(pacman_processing),\n",
+    "            'emg': (dj.ERD(acq.EmgChannelGroup)-1) + (dj.ERD(pro.MotorUnit)-1+10) - dj.ERD(ppro),\n",
+    "            'neural': (dj.ERD(acq.NeuralChannelGroup)-1) + (dj.ERD(pro.Neuron)-1+10) - dj.ERD(ppro)}"
    ]
   },
   {
@@ -70,7 +59,14 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
+    "pre-allocate Master-Part Lookup tables?\n",
+    "would it be better to consolidate equipments into a single table? In most cases that will work, but some have extra important fields (e.g. loadcell)\n",
+    "\n",
     "inconsistency in ERD drawings\n",
+    "import common not working (missing modules?)\n",
+    "some way to impose a populate constraint between tables (don't want to inherit keys, but want one populated before another)\n",
+    "proj not working for dependent table in matlab\n",
+    "get/set functions? (e.g. to ensure proper formatting)\n",
     "\"\"\""
    ]
   },
@@ -110,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
