Update tutorial notebooks

--- a/notebooks/20201217_tutorial/01-Explore pipeline, query and fetch.ipynb
+++ b/notebooks/20201217_tutorial/01-Explore pipeline, query and fetch.ipynb
@@ -311,6 +311,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "acquisition.EphysRecording.describe();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dj.Diagram(acquisition.Session) + 1 - 1"
    ]
   },
@@ -448,6 +457,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "acquisition.Session & 'session_date in (\"2020-01-06\", \"2019-11-01\")'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# restrict with a list\n",
     "acquisition.Session & ['session_date=\"2020-01-06\"', {'session_date': '2019-11-01'}]"
    ]
@@ -467,6 +485,15 @@
    "source": [
     "# sessions with ephys recordings\n",
     "acquisition.Session & acquisition.EphysRecording"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acquisition.EphysRecording()"
    ]
   },
   {
@@ -629,7 +656,7 @@
    "outputs": [],
    "source": [
     "# restrict to only `AntDel`, and recorded after '2019-01-01'\n",
-    "q & 'muscle_abbr=\"AntDel\"' & 'session_date > \"2019-01-01\"'"
+    "q & 'muscle=\"deltoid\"' & 'session_date > \"2019-01-01\"'"
    ]
   },
   {
@@ -665,6 +692,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "acquisition.Session.proj()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "acquisition.Session.proj('rig', 'task')"
    ]
   },
@@ -689,6 +725,24 @@
    "metadata": {},
    "source": [
     "### Perform simple computations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acquisition.EphysRecording()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acquisition.EphysRecording.File()"
    ]
   },
   {
@@ -759,7 +813,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more functions that could be used in proj(), aggr() and string of restriction, refer to the [mysql documentation](https://dev.mysql.com/doc/refman/8.0/en/sql-function-reference.html).\n",
+    "For more functions that could be used in proj(), aggr() and string of restriction, refer to the [mysql documentation](https://dev.mysql.com/doc/refman/8.0/en/sql-function-reference.html), or [this doc](https://www.w3schools.com/sql/sql_ref_mysql.asp).\n",
     "    "
    ]
   },
@@ -786,6 +840,15 @@
    "outputs": [],
    "source": [
     "dj.U()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acquisition.EmgChannelGroup()"
    ]
   },
   {
@@ -992,6 +1055,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "acquisition.EmgChannelGroup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# get data in order by some fields\n",
     "acquisition.EmgChannelGroup.fetch('emg_channel_group_id', as_dict=True, order_by='emg_channel_group_id')"
    ]
@@ -1071,22 +1143,6 @@
    "source": [
     "# fetch primary key\n",
     "(lab.Monkey & {'monkey': 'Alex'}).fetch1('KEY')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Deletion (`.delete()`) - deleting entries and their dependencies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(lab.Monkey & {'monkey': 'Alex'}).delete()"
    ]
   },
   {
