--- a/notebooks/20201217_tutorial/02-Create tables, insert entries, and autopopulate.ipynb
+++ b/notebooks/20201217_tutorial/02-Create tables, insert entries, and autopopulate.ipynb
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "neuron1_key"
+    "neuron1_key[0]"
    ]
   },
   {
@@ -209,8 +209,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "TotalSpikes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "TotalSpikes.drop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
